2000-02-12  Joe Shaw <joe@helixcode.com>
	* gtkhtml-embedded.c (gtk_html_set_parameter): g_strdup the parameter
	name because we cannot assume that it won't be freed during the life
	of the application.
	* gtkhtml-embedded.c (free_param): Added freeing of the key.

2000-02-12  Joe Shaw <joe@helixcode.com>
	* gtkhtml.c (expose): Did the same thing as I did with the draw
	method; see below.

2000-02-11  Joe Shaw <joe@helixcode.com>
	* gtkhtml.c (draw): Fixed a bug where embedded widgets were not being
	repainted correctly; the widget was updating all of its child widgets 
	and then painting over them. The order has been switched; thus, the 
	widget repaints itself first and then its child widgets are redrawn.
	
	* htmlembedded.c (html_embedded_new_widget): Connected the 
	button_press_event signal to a new handler, html_embedded_grab_cursor,
	that does not propagate up the tree so that embedded text widgets, 
	such as GtkEntry, retain the cursor.

2000-02-10  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (gtk_html_set_paragraph_style): New function.

	* htmlengine-edit-styles.c
	(html_engine_set_clueflow_style): New function.

	* htmlclueflow.c (html_clueflow_set_style): New function.

	* gtkhtml.c (update_styles): New helper function.
	(clueflow_style_to_paragraph_style): New helper function.
	(class_init): Install new signal
	`current_paragraph_style_changed'.
	(init): Initialize `paragraph_style' to
	`GTK_HTML_PARAGRAPH_STYLE_NORMAL'.

	* gtkhtml.h: New enum `GtkHTMLParagraphStyle'.  New signal
	`current_paragraph_style_changed'.  New member
	`GtkHTMLParagraphStyle'.

	* htmlengine-edit-styles.c: New file.
	* htmlengine-edit-styles.h: New file.

	* htmlengine-edit.c (html_engine_insert): Avoid inserting anything
	if the current object is NULL.

	* htmlundo.c (html_undo_add_undo_action): Update the stack size
	value when removing an element.

2000-02-09  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit.c (html_engine_insert): Support undo.
