@@ -1,4 +1,10 @@
+2000-02-13  Miguel de Icaza  <miguel@gnu.org>
+
+	* htmlengine.c (html_engine_draw): Do not paint if the width or
+	the height are zero.  Fixes crash (as this case is also window == NULL).
+
 2000-02-12  Joe Shaw <joe@helixcode.com>
+	
 	* gtkhtml-embedded.c (gtk_html_set_parameter): g_strdup the parameter
 	name because we cannot assume that it won't be freed during the life
 	of the application.
